# Copyright (c) 2025-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/test_helper.gni")

es2panda_frontend_unittest("lexer_test") {
  sources = [ "lexer/lexer_test.cpp" ]
}

es2panda_frontend_unittest("keywordsUtil_test") {
  sources = [ "lexer/keywordsUtil_test.cpp" ]
}

es2panda_frontend_unittest("token_test") {
  sources = [ "lexer/token_test.cpp" ]
}

es2panda_frontend_unittest("parser_test") {
  sources = [ "parser/parser_test.cpp" ]
}

es2panda_frontend_unittest("program_test") {
  sources = [ "parser/program/program_test.cpp" ]
}

es2panda_frontend_unittest("sourceTextModuleRecord_test") {
  sources = [ "parser/module/sourceTextModuleRecord_test.cpp" ]
}
