# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/static_core/ark_config.gni")
import("//build/ohos.gni")

ohos_executable("es2panda") {
  sources = [
    "main.cpp",
    "options.cpp",
  ]

  include_dirs = [
    "$target_gen_dir",
  ]

  build_gen_root = rebase_path(root_gen_dir)

  cflags_cc = [
    # TODO(vpukhov): adjust es2panda path
    "-DDEFAULT_ARKTSCONFIG=\"$build_gen_root/plugins/es2panda/generated/arktsconfig.json\""
  ]

  configs = [
    sdk_libc_secshared_config,
    "$ark_root:ark_config",
    "$ark_es2panda_root:libes2panda_public_config",
    "$ark_root/assembler:arkassembler_public_config",
    "$ark_root/libpandafile:arkfile_public_config",
    "$ark_root/libpandabase:arkbase_public_config",
    "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
    "$ark_root/compiler:arkcompiler_public_config",
    "$ark_root/runtime:arkruntime_public_config",
  ]

  deps = [
    "$ark_es2panda_root:libes2panda_frontend_static",
    "$ark_root/assembler:libarktsassembler_frontend_static",
    "$ark_root/libpandafile:libarktsfile_frontend_static",
    "$ark_root/libpandabase:libarktsbase_frontend_static",
    "$ark_root/bytecode_optimizer:libarktsbytecodeopt_frontend_static",
    "$ark_root/compiler:libarktscompiler_frontend_static",
  ]

  libs = platform_libs
  ldflags = platform_ldflags
  if (is_linux) {
    libs += [
      "stdc++fs"
    ]
  }

  install_enable = true
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

