# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/version.gni")

group("bindings_test") {
  # deps = [ ":run_test" ]
}

action("run_test") {
  script = "run_bindings.sh"
  args = [
    rebase_path("./"),
    rebase_path(
        "//prebuilts/build-tools/common/nodejs/node-v16.20.2-linux-x64/bin"),
    rebase_path("//prebuilts/ohos-sdk/linux/${api_version}/ets"),
  ]
  outputs = [ "$target_out_dir/$target_name.timestamp" ]
}
